添加灵梦的阴阳玉就ok啦

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "pages":[
     "pages/hanshu/hanshu",
     "pages/index/index",
+    "pages/huaji/huaji",
     "pages/logs/logs"
   ],
   "window":{
